# vim-rest-client

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  conf.vim
src/: lib.rs  main.rs  process_while.rs
tests/: test_parse_input.rs
