[package]
name = "vim-rest-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
jq-rs = {version = "0.4.1", features = ["bundled"]}
regex = "1"
openssh = {version = "0.10.3", features = ["native-mux"]}
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}
base64 = "0.13.0"
